--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ compiling:
 releasing:
   stage: releasing
   script:
-    - earthly --ci +releasing --server-url "${CI_SERVER_URL}" --project_id "${CI_PROJECT_ID}" --reference "${CI_COMMIT_SHA}"
+    - earthly --ci +releasing --server_url "${CI_SERVER_URL}" --job_token "${CI_JOB_TOKEN}" --project_id "${CI_PROJECT_ID}" --reference "${CI_COMMIT_SHA}"
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
