--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
   - linting
   - module-tidying
   - compiling
+  - releasing
   - release-binary-compiling
 
 
@@ -14,6 +15,7 @@ services:
 
 
 variables:
+  SEMANTIC_VERSIONING_REGEX: "[0-9][0-9]*[.][0-9][0-9]*[.][0-9][0-9]*"
   DOCKER_HOST: tcp://docker:2375
 
 
@@ -76,6 +78,35 @@ compiling:
     - earthly --ci +compiling-linux-amd64
   rules:
     - if: $CI_MERGE_REQUEST_ID
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+
+
+releasing:
+  stage: releasing
+  image: rust
+  script:
+    # Get current version and assert it matches SEMANTIC_VERSIONING_REGEX.
+    - current_version=$(cat VERSION)
+    - echo "${current_version}" | grep -q "^${SEMANTIC_VERSIONING_REGEX}$"
+    # If the tag already exist then exit.
+    - new_tag=${current_version}
+    - git tag -l | grep -q "^${new_tag}$" && exit 0
+    # Get latest tag.
+    - latest_tag=$(git tag --sort=-committerdate | head -1)
+    # Generate the release description.
+    - release_description=$(git log --format="* %s" ${latest_tag}.. --no-merges)
+    # Install GitlabCI cli releasing tool.
+    - curl --location --output /usr/local/bin/release-cli "https://release-cli-downloads.s3.amazonaws.com/latest/release-cli-linux-amd64"
+    - chmod +x /usr/local/bin/release-cli
+    # Create the new release.
+    - /usr/local/bin/release-cli create
+      --name "${new_tag}"
+      --description "${release_description}"
+      --tag-name "${new_tag}"
+      --ref "${CI_COMMIT_SHA}"
+      --assets-link '{"name":"linux-amd64-binary.zip","url":"https://gitlab.com/DeveloperC/git-changed/-/jobs/artifacts/'${new_tag}'/download?job=release-binary-compiling-linux-amd64"}'
+      --assets-link '{"name":"darwin-amd64-binary.zip","url":"https://gitlab.com/DeveloperC/git-changed/-/jobs/artifacts/'${new_tag}'/download?job=release-binary-compiling-darwin-amd64"}'
+  rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 
