ci: removing altering Earthly entrypoint

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,11 +17,10 @@ services:
 variables:
   SEMANTIC_VERSIONING_REGEX: "[0-9][0-9]*[.][0-9][0-9]*[.][0-9][0-9]*"
   DOCKER_HOST: tcp://docker:2375
+  EARTHLY_EXEC_CMD: "/bin/sh"
 
 
-image:
-  name: earthly/earthly
-  entrypoint: ["/bin/sh", "-c"]
+image: earthly/earthly:v0.6.22
 
 
 clean-git-history-checking:
