--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,23 +82,21 @@ compiling:
 
 releasing:
   stage: releasing
-  image: rust
+  image: registry.gitlab.com/gitlab-org/release-cli
+  before_script:
+    - apk add git
   script:
-    # Get current version and assert it matches SEMANTIC_VERSIONING_REGEX.
-    - current_version=$(cat VERSION)
-    - echo "${current_version}" | grep -q "^${SEMANTIC_VERSIONING_REGEX}$"
     # If the tag already exist then exit.
-    - new_tag=${current_version}
+    - new_tag=$(cat VERSION)
     - git tag -l | grep -q "^${new_tag}$" && exit 0
-    # Get latest tag.
-    - latest_tag=$(git tag --sort=-committerdate | head -1)
+    # Where to start generating the release description from.
+    - base_commit=$(git rev-list --max-parents=0 HEAD)
+    - latest_tag=$(git tag --sort=committerdate | tail -1)
+    - description_from="${latest_tag:-${base_commit}}"
     # Generate the release description.
-    - release_description=$(git log --format="* %s" ${latest_tag}.. --no-merges)
-    # Install GitlabCI cli releasing tool.
-    - curl --location --output /usr/local/bin/release-cli "https://release-cli-downloads.s3.amazonaws.com/latest/release-cli-linux-amd64"
-    - chmod +x /usr/local/bin/release-cli
+    - release_description=$(git log --format="* %s" ${description_from}.. --no-merges)
     # Create the new release.
-    - /usr/local/bin/release-cli create
+    - release-cli create
       --name "${new_tag}"
       --description "${release_description}"
       --tag-name "${new_tag}"
