--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,41 +89,17 @@ releasing:
     # If the tag already exist then exit.
     - new_tag=$(cat VERSION)
     - git tag -l | grep -q "^${new_tag}$" && exit 0
-    # Where to start generating the release description from.
-    - base_commit=$(git rev-list --max-parents=0 HEAD)
-    - latest_tag=$(git tag --sort=committerdate | tail -1)
-    - description_from="${latest_tag:-${base_commit}}"
-    # Generate the release description.
-    - release_description=$(git log --format="* %s" ${description_from}.. --no-merges)
-    # Create the new release.
-    - release-cli create
-      --name "${new_tag}"
-      --description "${release_description}"
-      --tag-name "${new_tag}"
-      --ref "${CI_COMMIT_SHA}"
-      --assets-link '{"name":"linux-amd64-binary.zip","url":"https://gitlab.com/DeveloperC/git-changed/-/jobs/artifacts/'${new_tag}'/download?job=release-binary-compiling-linux-amd64"}'
-      --assets-link '{"name":"darwin-amd64-binary.zip","url":"https://gitlab.com/DeveloperC/git-changed/-/jobs/artifacts/'${new_tag}'/download?job=release-binary-compiling-darwin-amd64"}'
+    # Create the new tag.
+    - git tag "${new_tag}"
+    - git push --tags
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 
-release-binary-compiling-linux-amd64:
+release-binary-compiling:
   stage: release-binary-compiling
+  image: registry.gitlab.com/gitlab-org/release-cli
   script:
-    - earthly --ci +compiling-linux-amd64
-  artifacts:
-    paths:
-      - git-changed
-  rules:
-    - if: $CI_COMMIT_TAG
-
-
-release-binary-compiling-darwin-amd64:
-  stage: release-binary-compiling
-  script:
-    - earthly --ci +compiling-linux-amd64
-  artifacts:
-    paths:
-      - git-changed
+    - git push --tags
   rules:
     - if: $CI_COMMIT_TAG
